# Flask-Tesla-Rate

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.devcontainer/: devcontainer.json
app/: app.py
app/templates/: index.html  success.html
